--- a/Fake_News_Detection.ipynb
+++ b/Fake_News_Detection.ipynb
@@ -7,13 +7,13 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ibrahim-saleem/projects/blob/main/Copy_of_Fake_News_Detection.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ibrahim-saleem/projects/blob/main/Fake_News_Detection.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "## Fake News Detection by *'Syed Ibrahim Saleem', 'Kalidindi' and 'Sirisha'* "
+        "## Fake News Detection by *'Syed Ibrahim Saleem'"
       ],
       "metadata": {
         "id": "lEuW4PsXTixX"
@@ -22,7 +22,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### use the link given below to download the datasets "
+        "### use the link given below to download the datasets"
       ],
       "metadata": {
         "id": "VOgXdJNJWQq4"
@@ -48,7 +48,7 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns \n",
+        "import seaborn as sns\n",
         "from sklearn.feature_extraction.text import CountVectorizer\n",
         "from sklearn.feature_extraction.text import TfidfTransformer\n",
         "from sklearn import feature_extraction, linear_model, model_selection, preprocessing\n",
@@ -785,7 +785,7 @@
         }
       ],
       "source": [
-        "# Remove the date \n",
+        "# Remove the date\n",
         "data.drop([\"date\"],axis=1,inplace=True)\n",
         "data.head()"
       ]
@@ -1036,7 +1036,7 @@
         "                          normalize=False,\n",
         "                          title='Confusion matrix',\n",
         "                          cmap=plt.cm.Blues):\n",
-        "    \n",
+        "\n",
         "    plt.imshow(cm, interpolation='nearest', cmap=cmap)\n",
         "    plt.title(title)\n",
         "    plt.colorbar()\n",
@@ -1109,8 +1109,8 @@
         "pipe = Pipeline([('vect', CountVectorizer()),\n",
         "                 ('tfidf', TfidfTransformer()),\n",
         "                 ('model', DecisionTreeClassifier(criterion= 'entropy',\n",
-        "                                           max_depth = 20, \n",
-        "                                           splitter='best', \n",
+        "                                           max_depth = 20,\n",
+        "                                           splitter='best',\n",
         "                                           random_state=42))])\n",
         "# Fitting the model\n",
         "model = pipe.fit(X_train, y_train)\n",
